# redbull-editions-generator

./: .gitignore  .pylintrc  CLAUDE.md  README.md  collector.py  processor.py  pyproject.toml  requirements.txt
.github/workflows/: update-editions.yml
data/: collection_summary.json  corrections.json  redbull_editions_final.json  region_emojis.json
data/changelogs/: changelog_20251010_223123.md  changelog_20251014_054134.md  changelog_20251015_054144.md  changelog_20251016_054344.md  changelog_20251017_054354.md  changelog_20251018_054150.md  changelog_20251021_054421.md  changelog_20251022_054428.md  changelog_20251022_123157.md  changelog_20251022_135339_manual.md  changelog_20251023_055139.md  changelog_20251025_054737.md  changelog_20251026_213033_manual.md  changelog_20251028_055240.md  changelog_20251030_054844.md  changelog_20251031_055218.md  changelog_20251104_055105.md  changelog_20251105_055204.md  changelog_20251106_055424.md  changelog_20251107_055221.md  changelog_20251108_054819.md  changelog_20251111_055142.md  changelog_20251112_055139.md  changelog_20251112_212131.md  changelog_20251114_054950.md  changelog_20251115_055139.md  changelog_20251118_055148.md  changelog_20251120_055023.md  changelog_20251121_055045.md  changelog_20251122_054950.md  changelog_20251125_055245.md  changelog_20251126_055226.md  changelog_20251127_055327.md  changelog_20251128_055053.md  changelog_20251129_055158.md  changelog_20251203_055212.md  changelog_20251205_055419.md  changelog_20251206_014018.md  (+132 more)
lib/: __init__.py  locale_priority.py  logging_utils.py
(+133 files in other folders)
